:hammer: added endpoints to relation
